Resolved invalid code from W3C specs

--- a/Web1/Module5/DiscoverJuneau_Part04_drehbein/stay.html
+++ b/Web1/Module5/DiscoverJuneau_Part04_drehbein/stay.html
@@ -28,7 +28,7 @@
       <section id="mainContent">
         <div class="formInfo">
           <p id="lodgingInfo">For more lodging information, submit the following form:<br><span class="required">*All fields required!</span></p>
-          <form action="">
+          <form>
             <label for="customerName">Name</label>
             <input type="text" id="customerName" name="customerName" placeholder="firstname lastname" required><br>
 
@@ -39,7 +39,7 @@
             <input type="tel" id="phone" name="phone" placeholder="555-122-7700" required><br>
 
             <label for="rangeAmount">$ Cost</label>
-            <select name="rangeAmount" id="rangeAmount" required>
+            <select name="rangeAmount" id="rangeAmount">
               <option value="1">$100 - $199</option>
               <option value="2">$200 - $299</option>
               <option value="3">$300 - $399</option>
